--- a/assets/css/final.css
+++ b/assets/css/final.css
@@ -124,6 +124,14 @@
   height: 1.5rem
 }
 
+.h-full{
+  height: 100%
+}
+
+.h-80{
+  height: 20rem
+}
+
 .w-16{
   width: 4rem
 }
@@ -146,6 +154,14 @@
 
 .w-20{
   width: 5rem
+}
+
+.basis-full{
+  flex-basis: 100%
+}
+
+.basis-2\/3{
+  flex-basis: 66.666667%
 }
 
 .list-none{
@@ -232,6 +248,14 @@
 
 .bg-\[url\(\'\$\{this\.\#timeLineFrames\[index\]\.image\}\'\)\]{
   background-image: url('${this.#timeLineFrames[index].image}')
+}
+
+.bg-contain{
+  background-size: contain
+}
+
+.bg-cover{
+  background-size: cover
 }
 
 .bg-center{
@@ -430,12 +454,24 @@
     width: 50%
   }
 
+  .lg\:w-\[639px\]{
+    width: 639px
+  }
+
   .lg\:min-w-\[639px\]{
     min-width: 639px
   }
 
   .lg\:max-w-\[639px\]{
     max-width: 639px
+  }
+
+  .lg\:basis-1\/3{
+    flex-basis: 33.333333%
+  }
+
+  .lg\:basis-2\/3{
+    flex-basis: 66.666667%
   }
 
   .lg\:flex-row{
