--- a/assets/css/final.css
+++ b/assets/css/final.css
@@ -34,6 +34,10 @@
   }
 }
 
+.static{
+  position: static;
+}
+
 .fixed{
   position: fixed;
 }
@@ -354,14 +358,6 @@
   opacity: 0.6;
 }
 
-.opacity-75{
-  opacity: 0.75;
-}
-
-.opacity-25{
-  opacity: 0.25;
-}
-
 .opacity-90{
   opacity: 0.9;
 }
@@ -467,12 +463,20 @@
     width: 50%;
   }
 
+  .lg\:w-full{
+    width: 100%;
+  }
+
   .lg\:min-w-\[639px\]{
     min-width: 639px;
   }
 
   .lg\:max-w-\[639px\]{
     max-width: 639px;
+  }
+
+  .lg\:max-w-\[536px\]{
+    max-width: 536px;
   }
 
   .lg\:basis-1\/3{
