--- a/assets/css/finalV2.css
+++ b/assets/css/finalV2.css
@@ -358,6 +358,10 @@
   opacity: 0.6;
 }
 
+.opacity-80{
+  opacity: 0.8;
+}
+
 .opacity-90{
   opacity: 0.9;
 }
@@ -469,14 +473,6 @@
 
   .lg\:min-w-\[639px\]{
     min-width: 639px;
-  }
-
-  .lg\:max-w-\[639px\]{
-    max-width: 639px;
-  }
-
-  .lg\:max-w-\[536px\]{
-    max-width: 536px;
   }
 
   .lg\:basis-1\/3{
