--- a/assets/css/finalV1.css
+++ b/assets/css/finalV1.css
@@ -50,8 +50,16 @@
   bottom: 0px;
 }
 
+.order-first{
+  order: -9999;
+}
+
 .m-0{
   margin: 0px;
+}
+
+.m-1{
+  margin: 0.25rem;
 }
 
 .m-2{
@@ -89,12 +97,20 @@
   margin-right: 0.25rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mt-1{
   margin-top: 0.25rem;
 }
 
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
 }
 
 .block{
@@ -185,10 +201,6 @@
   flex-basis: 100%;
 }
 
-.list-none{
-  list-style-type: none;
-}
-
 .flex-row{
   flex-direction: row;
 }
@@ -215,6 +227,10 @@
 
 .justify-evenly{
   justify-content: space-evenly;
+}
+
+.justify-items-center{
+  justify-items: center;
 }
 
 .gap-x-2{
@@ -318,10 +334,6 @@
   padding: 0.5rem;
 }
 
-.p-3{
-  padding: 0.75rem;
-}
-
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -346,11 +358,6 @@
 
 .font-youngSerif{
   font-family: YoungSerif, serif;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-black{
@@ -435,17 +442,13 @@
     order: 3;
   }
 
-  .sm\:order-4{
-    order: 4;
+  .sm\:m-3{
+    margin: 0.75rem;
   }
 
   .sm\:my-4{
     margin-top: 1rem;
     margin-bottom: 1rem;
-  }
-
-  .sm\:mb-0{
-    margin-bottom: 0px;
   }
 
   .sm\:w-full{
@@ -460,16 +463,6 @@
     border-radius: 0px;
   }
 
-  .sm\:px-2{
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .sm\:py-1{
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
   .sm\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -481,6 +474,10 @@
 }
 
 @media (min-width: 1024px){
+  .lg\:mr-2{
+    margin-right: 0.5rem;
+  }
+
   .lg\:flex{
     display: flex;
   }
