--- a/assets/css/finalV3.css
+++ b/assets/css/finalV3.css
@@ -344,6 +344,11 @@
   padding-bottom: 0.25rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pl-4{
   padding-left: 1rem;
 }
@@ -470,6 +475,16 @@
 
   .sm\:text-center{
     text-align: center;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:gap-3{
+    gap: 0.75rem;
   }
 }
 
