--- a/assets/css/finalV5.css
+++ b/assets/css/finalV5.css
@@ -442,6 +442,10 @@
     margin-bottom: 1rem;
   }
 
+  .sm\:flex{
+    display: flex;
+  }
+
   .sm\:w-full{
     width: 100%;
   }
@@ -461,6 +465,16 @@
 
   .sm\:text-center{
     text-align: center;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:flex{
+    display: flex;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
   }
 }
 
