--- a/assets/css/finalV6.css
+++ b/assets/css/finalV6.css
@@ -42,6 +42,14 @@
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
 .inset-\[8\%\]{
   inset: 8%;
 }
@@ -129,6 +137,10 @@
   display: table;
 }
 
+.grid{
+  display: grid;
+}
+
 .\!hidden{
   display: none !important;
 }
@@ -137,16 +149,8 @@
   display: none;
 }
 
-.h-20{
-  height: 5rem;
-}
-
 .h-6{
   height: 1.5rem;
-}
-
-.h-8{
-  height: 2rem;
 }
 
 .h-80{
@@ -157,20 +161,8 @@
   height: 359px;
 }
 
-.h-\[396px\]{
-  height: 396px;
-}
-
-.w-16{
-  width: 4rem;
-}
-
 .w-2\/3{
   width: 66.666667%;
-}
-
-.w-20{
-  width: 5rem;
 }
 
 .w-4\/5{
@@ -181,12 +173,16 @@
   width: 83.333333%;
 }
 
-.w-8{
-  width: 2rem;
+.w-\[639px\]{
+  width: 639px;
 }
 
 .w-full{
   width: 100%;
+}
+
+.flex-none{
+  flex: none;
 }
 
 .grow{
@@ -203,10 +199,6 @@
 
 .flex-col{
   flex-direction: column;
-}
-
-.items-end{
-  align-items: flex-end;
 }
 
 .items-center{
@@ -239,8 +231,20 @@
        column-gap: 0.625rem;
 }
 
+.place-self-end{
+  place-self: end;
+}
+
 .self-end{
   align-self: flex-end;
+}
+
+.justify-self-center{
+  justify-self: center;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
 }
 
 .rounded-bl-full{
@@ -354,6 +358,11 @@
   font-family: YoungSerif, serif;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-fluoPink{
   color: lab(44 71 -10);
 }
@@ -368,10 +377,6 @@
 
 .no-underline{
   text-decoration-line: none;
-}
-
-.opacity-50{
-  opacity: 0.5;
 }
 
 .opacity-60{
@@ -442,10 +447,6 @@
     margin-bottom: 1rem;
   }
 
-  .sm\:flex{
-    display: flex;
-  }
-
   .sm\:w-full{
     width: 100%;
   }
@@ -469,10 +470,6 @@
 }
 
 @media (min-width: 768px){
-  .md\:flex{
-    display: flex;
-  }
-
   .md\:flex-row{
     flex-direction: row;
   }
@@ -493,10 +490,6 @@
 
   .lg\:w-full{
     width: 100%;
-  }
-
-  .lg\:min-w-\[639px\]{
-    min-width: 639px;
   }
 
   .lg\:basis-1\/3{
